assets/css/responsive.css
/* ... */
@media(max-width: 425px) {
  .md-hidden {
    display: inline-block;
  }

  .about {
    padding-left: 0px;
    padding-top: 60px;
    padding-bottom: 60px
  }

  .about-head {
    height: 270px;
  }

  section.about-wrap {
    margin-top: -250px;
    border-bottom: 1px solid #C0C5E8;
  }

  .about-head .img-1 {}

  .about-head .img-2 {
    height: 200px;
  }

  .about-head .img-1 {
    height: 270px;
  }

  .img-2 img {
    margin-left: calc(100% - 170px);
    margin-right: 0px;
    border-top-left-radius: 16px;
    border-bottom-left-radius: 16px;
  }

  .img-1 img {
    border-top-right-radius: 16px;
    border-bottom-right-radius: 16px;
  }


  .img-2 {
    margin-left: auto;
    max-width: 196px;
    max-height: 236px;
    border-top-left-radius: 16px;
    border-bottom-left-radius: 16px;
  }

  .sm-center {
    text-align: center;
    margin-right: auto;
    margin-left: auto;
  }

  .title-fluid {
    font-weight: 800;
    font-size: 24px;
    line-height: 49px;
    color: #031B4E;
  }

  .check {
    font-size: .9rem;
    display: inline-flex;
  }

  .img-team {
    text-align: center;
    max-height: 150px;
    max-width: 150px;
    margin-right: auto;
    margin-left: auto;
  }

  .contact-banner div {
    min-height: 100px;
  }

  .contact-img {
    min-height: 100px;
  }

  .sub-group {
    width: calc(100%);

  }

  .sm-hidden {
    display: none;
  }

  .home-banner {
    padding-top: 8em;
    min-height: 630px;
  }

  .ellipse-bg {
    padding: 0em 0.2em;
    margin: 0em .4em;
    text-align: center;
  }

  .ios {
    margin-top: 0px;
  }

  .services-title {
    width: 100%;
    font-size: 24px;
    font-weight: 600;
    margin-top: 0px;
    line-height: 22px;
  }

  .ios-service-image {
    border-top-right-radius: 20px;
    border-bottom-right-radius: 0px;
    border-top-left-radius: 20px;
    min-height: 200px;
  }

  .ui-ux-service-image {
    border-top-right-radius: 20px;
    border-bottom-right-radius: 0px;
    border-top-left-radius: 20px;
    min-height: 200px;
  }

  .product-service-image {
    border-top-right-radius: 20px;
    border-bottom-right-radius: 0px;
    border-top-left-radius: 20px;
    min-height: 200px;
  }

  .android-service-image {
    border-top-left-radius: 20px;
    border-bottom-left-radius: 0px;
    border-top-right-radius: 20px;
    min-height: 200px;
  }

  .web-service-image {
    border-top-left-radius: 20px;
    border-bottom-left-radius: 0px;
    border-top-right-radius: 20px;
    min-height: 200px;
  }

  .quality-service-image {
    border-top-left-radius: 20px;
    border-bottom-left-radius: 0px;
    border-top-right-radius: 20px;
    min-height: 200px;
  }

  .container-scroll {
    margin-top: 150px;
    position: relative;
    width: 24px;
    height: 24px;
    display: none;

  }

  .blog-title {
    font-size: 40px;
    font-weight: 500;
    line-height: 45px;
    margin-top: 40px;
    margin-bottom: 40px;
  }

  .blog-banner {
    background: url(../img/blog-header-bg.png) no-repeat;
    background-size: cover;
    box-shadow: inset 0 0 0 2000px #00287157;
    font-weight: 800;
    font-size: 90px;
    line-height: 123px;
    color: #FFFFFF;
    min-height: 0px;
    border-radius: 0px !important;
  }

  .cta {
    padding: 20px;
  }

  h1.content-header {
    font-size: 36px;
    line-height: 49px;
    text-align: center;
    letter-spacing: 0.04em;
    color: #FFFFFF;
  }

  .service-text {
    font-size: 17px;
    color: #666E7D;
    margin-bottom: 30px;
  }

  .mobile-center {
    text-align: center;
  }


  .img-team>.team-link {
    position: absolute;
    left: 60%;
    /* right: auto; */
    top: 43.5%;
    bottom: 0%;
    height: 37px;
    width: 37px;
    border-radius: 50%;
    background: #2D3A93;
    padding: 8.2px;
    color: #FFFFFF;
    font-size: 21px;
  }

  .inline-link {
    font-size: 20px;
  }

  .txt {
    font-size: 16px;
    line-height: 28px;
  }

  .about .img-fluid {
    border-radius: 0px;
  }



  /* CAREER STYLES */

  .career-img,
  .career-img2 {
    width: 100%;
    padding: 0;
    display: inline-flex;
  }

  .career-img {
    min-height: 210px;
  }

  .career-img2 {
    min-height: 300px;
  }

  .career-img img:nth-child(1) {
    width: calc(57.3%);
    height: 198px;
    margin-top: 0;
    border-top-right-radius: 8px;
    border-bottom-right-radius: 8px;
  }

  .career-img img:nth-child(2) {
    width: calc(43% - 20px);
    height: 206px;
    margin-left: 20px;
    position: relative;
    border-top-left-radius: 8px;
    border-bottom-left-radius: 8px;
  }


  .career-img2 img:nth-child(1) {
    width: calc(43.7%);
    height: 281px;
    margin-top: 0;
    border-top-right-radius: 8px;
    border-bottom-right-radius: 8px;
  }

  .career-img2 img:nth-child(2) {
    width: calc(57.3% - 20px);
    height: 303px;
    margin-top: 30px;
    margin-left: 20px;
    position: relative;
    border-top-left-radius: 8px;
    border-bottom-left-radius: 8px;
  }

  .career-img img,
  .career-img2 img {
    border-radius: 0px;
  }

  .career-testimonial {
    display: block;
  }

  .career-testimonial>div:nth-child(1) {
    width: 100%;
    min-height: 440px;
  }

  .career-testimonial>div:nth-child(2) {
    width: 100%;
    min-height: 541px;
    background-color: #2D3A93;
    padding: 30px;
  }

  .career-testimonial>div:nth-child(2) .txt {
    font-weight: 800;
    font-size: 24px;
    line-height: 43px;
    color: #FFFFFF;
  }

  .benefit {
    margin-top: 6px;
    margin-bottom: 6px;
  }
}


/*WIDE SCREENS */

@media(max-width: 978px) {
  .left {
    margin-left: -9em;
  }
}

@media(max-width: 979px) {
  .work {
    width: calc(100% - 0.8em);
    margin-left: 0.3em;
    margin-right: 0.3em;
  }

  .ellipse {
    background-size: contain;
  }

  .nav-link {
    margin-right: 10px;
  }
}


@media(max-width: 866px) {
  .nav-link {
    margin-right: 5px;
  }
}

.ellipse {
  background-position: center;
  background-repeat: no-repeat;
}
/* ... */

